# python-data-pipeline

./: .gitignore  README.md  pyproject.toml
data/raw/: sample.csv
src/pipeline/: __init__.py  cli.py  io.py  logging_config.py  transform.py  validate.py
tests/: test_transform.py  test_validate.py
